--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.click-btn {
+  background-color: #FFF;
+    border: 0px;
+    height: 50px;
+    width: 100px;
+    border-radius: 5px;
+    color: #000;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8);
+    cursor: pointer;
+    font-weight: 700;
+    }
+    
+    .click-btn:hover{
+  box-shadow: 0px 4px 8px #61dafb93;
+  background-color: #61dafb;
+  color: #fff;
+}
